--- Auto-Git Commit ---

--- a/Gallery.html
+++ b/Gallery.html
@@ -86,8 +86,8 @@
   </section>
 
 
-<section>
-  <div class="main">
+<section class="main">
+  <div>
       <div class="cover">
         <img class="bread" src="img/gallery 2.png" alt="">
       </div>
@@ -95,7 +95,7 @@
   </div>
 </section>
 
-<section>
+<section class="midsec">
 
   <div class="container">
     <div class="row">
