--- Auto-Git Commit ---

--- a/Gallery.html
+++ b/Gallery.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
   <link rel="stylesheet" href="css/gallerycss.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
  
 </head>
 <body class="content">
@@ -89,7 +90,10 @@
 <section class="main">
   <div>
       <div class="cover">
-        <img class="bread" src="img/gallery 2.png" alt="">
+        <img class="bread" src="img/gallery 1.png" alt="">
+        <h1 class="gallery">
+          Gallery
+        </h1>
       </div>
        
   </div>
