--- Auto-Git Commit ---

--- a/Faculty.html
+++ b/Faculty.html
@@ -91,11 +91,15 @@
 
 <br>
 <br>
-<section  class="facbreadcrum" >
-  <div>
+
+<section  >
+  <div  class="facbreadcrum" >
   <img   class="facbread"  src="./img/faculty 1.png" alt="" width="100%" >
   <div class="midle">
-    <h1>  Faculty </h1>
+    <p>  Faculty  <br>
+    <span class="ob">
+    <a href="">Home</a> / <a href="">Faculty</a></span>
+  </p>
   </div>
 </div>
 </section>
