--- Auto-Git Commit ---

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -16,7 +16,7 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/aboutus.css">
   <link rel="stylesheet" href="css/crouselcounter.css">
 </head>
 <body>
@@ -88,18 +88,49 @@
   </section>
 <br>
 <br>
+<section  >
+  <div  class="facbreadcrum" >
+  <img   class="facbread"  src="./img/faculty 1.png" alt="" width="100%" >
+  <div class="midle">
+    <p>  Faculty  <br>
+    <span class="ob">
+    <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Faculty</a></span>
+  </p>
+  </div>
+</div>
+</section>
 <br>
 <br>
-<section>
 
-    hello this is about us page 
+
+<section>
+  <h1 class="head">Vission & Mission</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="vision">
+        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni obcaecati nemo dolor neque ipsam ad saepe. Magni iste quam enim? Sunt laboriosam quae nobis magnam non modi sint voluptate sed. <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati excepturi atque hic similique eveniet sit reprehenderit ea eos optio, quis sapiente minima nisi voluptate iusto? Modi ut molestias vel temporibus!</p>
+        </div>
+      </div>
+      <div class="col-sm">
+          <div class="mission">
+            <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni obcaecati nemo dolor neque ipsam ad saepe. Magni iste quam enim? Sunt laboriosam quae nobis magnam non modi sint voluptate sed. <br>   Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati excepturi atque hic similique eveniet sit reprehenderit ea eos optio, quis sapiente minima nisi voluptate iusto? Modi ut molestias vel temporibus! </p>
+        </div>
+      </div>
+      
+    </div>
+  </div>
 </section>
 
+<Section class="ds-msg">
+<img src="./img/face2.jpg" >
 
+</Section>
 
 <section>
   <!-- Footer -->
-<footer class="page-footer fixed-bottom font-small blue-grey lighten-5">
+<footer class="page-footer  font-small blue-grey lighten-5">
 
   <div style="background-color: #21d192;">
     <div class="container">
