--- Auto-Git Commit ---

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -122,12 +122,19 @@
     </div>
   </div>
 </section>
-
+<br>
+<br>
+<h1 class="head">Directors Message</h1>
 <Section class="ds-msg">
-<img src="./img/face2.jpg" >
-
+  <img class="ds-img" src="./img/face2.jpg" width="330px" height="450px"  >
+<p class="para para2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio in eaque deleniti ipsa corrupti cupiditate, culpa sequi suscipit dolore repellendus rerum quibusdam! Minus molestiae beatae deleniti quasi ipsam iste architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis officia quod natus. Culpa aliquid eaque dolore beatae, facere ex voluptatibus fugit dignissimos, animi molestias, quis alias cum consequatur dolorum!</p>
 </Section>
+<br>
+<br>
+<section  >
+  <h1 class="head">Alumini</h1>
 
+</section>
 <section>
   <!-- Footer -->
 <footer class="page-footer  font-small blue-grey lighten-5">
