--- Auto-Git Commit ---

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -90,7 +90,7 @@
 <br>
 <section  >
   <div  class="facbreadcrum" >
-  <img   class="facbread"  src="./img/faculty 1.png" alt="" width="100%" >
+  <img   class="facbread"  src="./img/About us.png" alt="" width="100%" >
   <div class="midle">
     <p>  Faculty  <br>
     <span class="ob">
@@ -102,7 +102,11 @@
 <br>
 <br>
 
-
+<section>
+  <h1 class="head">About Sevadal</h1>
+  <div>
+    <p class="abutdal">  Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio in eaque deleniti ipsa corrupti cupiditate, culpa sequi suscipit dolore repellendus rerum quibusdam! Minus molestiae beatae deleniti quasi ipsam iste architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis officia quod natus. Culpa aliquid eaque dolore beatae, facere ex voluptatibus fugit dignissimos, animi molestias, quis alias cum consequatur dolorum!</p> </div>
+</section>
 <section>
   <h1 class="head">Vission & Mission</h1>
   <div class="container">
@@ -126,8 +130,22 @@
 <br>
 <h1 class="head">Directors Message</h1>
 <Section class="ds-msg">
-  <img class="ds-img" src="./img/face2.jpg" width="330px" height="450px"  >
-<p class="para para2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio in eaque deleniti ipsa corrupti cupiditate, culpa sequi suscipit dolore repellendus rerum quibusdam! Minus molestiae beatae deleniti quasi ipsam iste architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis officia quod natus. Culpa aliquid eaque dolore beatae, facere ex voluptatibus fugit dignissimos, animi molestias, quis alias cum consequatur dolorum!</p>
+  <div>
+  <img class="ds-img" src="./img/face2.jpg"  >
+</div>
+<div>
+<p class="para para2"> Mr. Saurabh Srivastava <br> (frnt end Developer) <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio in eaque deleniti ipsa corrupti cupiditate, culpa sequi suscipit dolore repellendus rerum quibusdam! Minus molestiae beatae deleniti quasi ipsam iste architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis officia quod natus. Culpa aliquid eaque dolore beatae, facere ex voluptatibus fugit dignissimos, animi molestias, quis alias cum consequatur dolorum!</p> </div>
+</Section>
+<br>
+<br>
+<h1 class="head">Principles Message</h1>
+<Section class="ds-msg">
+  
+<div>
+<p class="para para2"> Mr. Saurabh Srivastava <br> (frnt end Developer) <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio in eaque deleniti ipsa corrupti cupiditate, culpa sequi suscipit dolore repellendus rerum quibusdam! Minus molestiae beatae deleniti quasi ipsam iste architecto! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nobis officia quod natus. Culpa aliquid eaque dolore beatae, facere ex voluptatibus fugit dignissimos, animi molestias, quis alias cum consequatur dolorum!</p> </div>
+<div>
+  <img class="ds-img" src="./img/face2.jpg"  >
+</div>
 </Section>
 <br>
 <br>
