--- Auto-Git Commit ---

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -92,9 +92,9 @@
   <div  class="facbreadcrum" >
   <img   class="facbread"  src="./img/About us.png" alt="" width="100%" >
   <div class="midle">
-    <p>  Faculty  <br>
+    <p> About us <br>
     <span class="ob">
-    <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Faculty</a></span>
+    <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">About US</a></span>
   </p>
   </div>
 </div>
@@ -149,9 +149,8 @@
 </Section>
 <br>
 <br>
-<section  >
+<section>
   <h1 class="head">Alumini</h1>
-
 </section>
 <section>
   <!-- Footer -->
