--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet"> 
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">  
 </head>
-<body>
+<body class="whole">
 
   <section>
     <!--Navbar -->
-<nav style="   background-color:#990011ff; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color:#66ff33; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -429,7 +429,7 @@
   <!-- Footer -->
 <footer style="background-color: fcf6f5ff;"  class="page-footer font-small ">
 
-  <div style="background-color: #990011ff ;">
+  <div style="background-color: #66ff33 ;">
     <div class="container">
 
       <!-- Grid row-->
