--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 </section>
 <br>
 <br>
-<section>
+<section class="service">
   <h2 class="head" id="about">Our Services </h2>
   
     <div class="card-body rounded-bottom">
@@ -237,9 +237,9 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <i class="fa fa-book fa-5x pb-1 myi"></i>
+              <img class="pic" src="/img/iconfinder_Ladder-step-shelf-book-education-school-library_5269083.png">
               <div class="ser-head"> 
-                <h3 >NOTES</h3>
+                <h3 >Library</h3>
               </div >
             </div>
            
