--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color:#66ff33; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color: #ffe066; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html" id="col">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -402,9 +402,7 @@
    <div class="board">
    
     <div class="list-group-flush">
-      <div class="list-group-item">
-        <p class="mb-0"><i class="fab fa-slack-hash fa-x mr-1 blue p-1 white-text rounded " aria-hidden="true"></i> ssds asda dadd ad dadasdad asdasdada dasdasdasd dasd dsdaf dvvddw</p>
-      </div>
+      
       <div class="list-group-item">
         <p class="mb-0"><i class="fab fa-slack-hash fa-x mr-1 blue p-1 white-text rounded " aria-hidden="true"></i> ssds asda dadd ad dadasdad asdasdada dasdasdasd dasd dsdaf dvvddw</p>
       </div>
@@ -429,7 +427,7 @@
   <!-- Footer -->
 <footer style="background-color: fcf6f5ff;"  class="page-footer font-small ">
 
-  <div style="background-color: #66ff33 ;">
+  <div style="background-color: #ffe066 ;">
     <div class="container">
 
       <!-- Grid row-->
