--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+        <a style="color: black;" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false" id="col">Academics
         </a>
         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
@@ -52,7 +52,7 @@
         </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
+        <a style="color: black;" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-333" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false" id="col">About Us
         </a>
         <div class="dropdown-menu dropdown-default" aria-labelledby="navbarDropdownMenuLink-333">
@@ -272,7 +272,7 @@
   
           <div class="card crdclr">
             <div class="card-body pb-0">
-              <i class="fas fa-pencil-ruler fa-5x pb-1 myi"></i>
+      <img src="./img/book.png">
               <div class="ser-head"> 
                 <h3 >NOTES</h3>
               </div >
@@ -396,12 +396,12 @@
 <br>
 <br>
 
-<section class="notice" >
+<!-- <section class="notice" >
 
   <h2 class="head" id="events"> Notice Board </h2>
    <div class="board">
    
-    <div class="list-group-flush">
+    <div  style="background-color: red;" class="list-group-flush">
       
       <div class="list-group-item">
         <p class="mb-0"><i class="fab fa-slack-hash fa-x mr-1 blue p-1 white-text rounded " aria-hidden="true"></i> ssds asda dadd ad dadasdad asdasdada dasdasdasd dasd dsdaf dvvddw</p>
@@ -419,7 +419,7 @@
   </div> 
 
  
-</section>
+</section> -->
 <br>
 <br>
 
