--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
 <br>
 <br>
 <section class="service">
-  <h2 class="head" id="about">Our Services </h2>
-  
+    <h2 class="head" id="about">Our Services </h2> 
     <div class="card-body rounded-bottom">
       <div class="container">
       <!-- Grid row -->
@@ -236,7 +235,7 @@
         <div class="col-md">
   
           <div class="card crdclr">
-            <div class="card-body pb-0">
+            <div class="card-body pb-0" id="card">
               <img class="pic" src="./img/books.png">
               <div class="ser-head"> 
                 <h3 >Library</h3>
@@ -257,7 +256,7 @@
             <div class="card-body pb-0">
               <img src="./img/boy-scout.png" class="pic">
               <div class="ser-head"> 
-                <h3 >Scouts & Guides</h3>
+                <h3 >Scout-Guide</h3>
               </div >
             </div>
             
@@ -274,7 +273,7 @@
             <div class="card-body pb-0">
       <img src="./img/entrust.png" class="pic">
               <div class="ser-head"> 
-                <h3 > Mental health Centre</h3>
+                <h3 >Counselling Cell</h3>
               </div >
             </div>
             
