--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             <!-- <div  style="text-align: justify;" class="card-body pt-0">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum laborum amet quo atque pariatur natus qui iure magni! Nemo incidunt excepturi dolores assumenda minus id cupiditate doloribus aspernatur! Delectus!</div> -->
           </div>
-  
+ 
         </div>
         <!-- Grid column -->
          <!-- Grid column -->
@@ -358,7 +358,7 @@
     <div class="item"><div class="card" style="width: 18rem;">
       <img class="card-img-top" src="./img/img2.jpg" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title" style="color: teal;">H. S. C. March 2020 results </h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
