--- a/Acadmics.html
+++ b/Acadmics.html
@@ -92,7 +92,93 @@
 <br>
 <section>
 
-    hello this is acadmics
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+       <!-- Card -->
+<div style="margin:5px;" class="card">
+
+  <!-- Card image -->
+  <div class="view overlay">
+    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/food.jpg" alt="Card image cap">
+    <a>
+      <div class="mask rgba-white-slight"></div>
+    </a>
+  </div>
+
+
+
+  <!-- Card content -->
+  <div class="card-body">
+
+    <!-- Title -->
+    <h4 class="card-title">Primary School</h4>
+    <hr>
+    <!-- Text -->
+    <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam fugiat possimus accusamus minus quod ipsum tempore voluptatem tenetur, odio officiis in, quos asperiores vitae dolores tempora voluptas numquam dolor veritatis.</p>
+
+  </div>
+
+  <!-- Card footer -->
+  <div class="rounded-bottom mdb-color lighten-3 text-center pt-3">
+    <ul class="list-unstyled list-inline font-small">
+      <li class="list-inline-item pr-2 white-text"><i class="far fa-clock pr-1"></i>05/10/2015</li>
+      <li class="list-inline-item pr-2"><a href="#" class="white-text"><i
+            class="far fa-comments pr-1"></i>12</a></li>
+      <li class="list-inline-item pr-2"><a href="#" class="white-text"><i class="fab fa-facebook-f pr-1">
+          </i>21</a></li>
+      <li class="list-inline-item"><a href="#" class="white-text"><i class="fab fa-twitter pr-1"> </i>5</a></li>
+    </ul>
+  </div>
+
+</div>
+<!-- Card -->
+      </div>
+      <div class="col-sm">
+       <!-- Card -->
+<div style="margin:5px;" class="card">
+
+  <!-- Card image -->
+  <div class="view overlay">
+    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/food.jpg" alt="Card image cap">
+    <a>
+      <div class="mask rgba-white-slight"></div>
+    </a>
+  </div>
+
+  <!-- Button -->
+
+
+  <!-- Card content -->
+  <div class="card-body">
+
+    <!-- Title -->
+    <h4 class="card-title">Primary School </h4>
+    <hr>
+    <!-- Text -->
+    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque vel, soluta numquam, aliquam, recusandae ea possimus dolores iste ipsam eaque reprehenderit omnis. Sed iusto explicabo quo sit voluptatum, repellat asperiores.</p>
+
+  </div>
+
+  <!-- Card footer -->
+  <div class="   ">
+    <!-- <ul style="justify-content: space-between;" class="list-unstyled list-inline font-small">
+      <li class="list-inline-item  white-text"><button type="button" class="btn btn-success">Success</button></li>
+     
+      <li class="list-inline-item"><button type="button" class="btn btn-primary">Primary</button></li>
+    </ul> -->
+    <ul style=" margin-left: -38px; list-style: none; display: flex; justify-content: space-around">
+      <li> <button type="button" class="btn btn-primary">Know More</button> </li>
+      <li> <button type="button" class="btn btn-success">Adimmision</button></li>
+    </ul>
+  </div>
+
+</div>
+<!-- Card -->
+      </div>
+     
+    </div>
+  </div>
 </section>
 
 
