--- Auto-Git Commit ---

--- a/Gallery.html
+++ b/Gallery.html
@@ -24,7 +24,7 @@
 
   <section>
     <!--Navbar -->
-<nav style="   background-color:#990011ff; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color:#2B7A78; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -184,7 +184,7 @@
   <!-- Footer -->
   <footer style="background-color: fcf6f5ff;"  class="page-footer font-small ">
 
-    <div style="background-color: #990011ff ;">
+    <div style="background-color: #2B7A78 ;">
       <div class="container">
   
         <!-- Grid row-->
