--- Auto-Git Commit ---

--- a/Gallery.html
+++ b/Gallery.html
@@ -86,16 +86,18 @@
 <!--/.Navbar -->
   </section>
 
+<br>
+<br>
 
-<section class="main">
-  <div>
-      <div class="cover">
-        <img class="bread" src="./img/newGallery.png" alt="">
-        <h1 class="gallery">
-          Gallery
-        </h1>
-      </div>
-       
+<section >
+  <div  class="facbreadcrum" >
+    <img   class="facbread"  src="./img/newGallery.png" alt="" width="100%" >
+    <div class="midle">
+      <p>  Faculty  <br>
+      <span class="ob">
+      <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Faculty</a></span>
+    </p>
+    </div>
   </div>
 </section>
 <br>
