--- a/Acadmics.html
+++ b/Acadmics.html
@@ -16,14 +16,14 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/acadmics.css">
   <link rel="stylesheet" href="css/crouselcounter.css">
 </head>
 <body>
 
   <section>
     <!--Navbar -->
-<nav style="   background-color:#990011ff; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
+<nav style="   background-color:#031640; font-weight: bold; " class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark ">
   <a class="navbar-brand" href="index.html">VBJC</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
     aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
@@ -88,6 +88,17 @@
 
 <br>
 <br>
+<section  >
+  <div  class="facbreadcrum" >
+  <img   class="facbread"  src="./img/acad.png" alt="" width="100%" >
+  <div class="midle">
+    <p> Acadmics <br>
+    <span class="ob">
+    <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Acadmics</a></span>
+  </p>
+  </div>
+</div>
+</section>
 <br>
 <br>
 <section>
@@ -273,10 +284,11 @@
 </section>
 <br>
 <br>
-<section>
-  <h1 class="head">Beyond Acadmics</h1>
-  <br>
-  <div style="padding-left: 150px;" class="container">
+<h1 class="head">Beyond Acadmics</h1>
+<br>
+<section style="background-color: #F4D03F ; paddinr:20px">
+ 
+  <div style="padding:30px; padding-left: 150px ;  " class="container">
     <div class="row">
       <div class="col-sm">
       <div>
@@ -327,7 +339,11 @@
           <img src="./img/target.png" alt="">
         </div>
         <div>
-          <p style="padding-left:15px; font-size: 28px; font-weight: bold; color: teal;">name</p>
+          <p style="padding-left:15px; font-size: 28px; font-weight: bold; color: teal;" data-toggle="tooltip" data-placement="left"
+  title="lore ipsum lore ipsum m sdijda wdjcsd swdjwj w ">
+name
+</p>
+          <!-- <p >name</p> -->
         </div>
       </div>
       </div>
@@ -337,7 +353,10 @@
             <img src="./img/healthy.png" alt="">
           </div>
           <div>
-            <p style="padding-left:15px; font-size: 28px; font-weight: bold; color: teal;">name</p>
+            <p style="padding-left:15px; font-size: 28px; font-weight: bold; color: teal;" data-toggle="tooltip" data-placement="left"
+            title="lore ipsum lore ipsum m sdijda wdjcsd swdjwj w ">
+          name
+          </p>
           </div>
         </div>
       </div>
@@ -347,7 +366,10 @@
             <img src="./img/target.png" alt="">
           </div>
           <div>
-            <p style="padding-left:15px; font-size: 28px; font-weight: bold; color: teal;">name</p>
+            <p style="padding-left:15px; font-size: 28px; font-weight: bold; color: teal;" data-toggle="tooltip" data-placement="left"
+            title="lore ipsum lore ipsum m sdijda wdjcsd swdjwj w ">
+          name
+          </p>
           </div>
         </div>
       </div>
@@ -380,7 +402,10 @@
             <img src="./img/healthy.png" alt="">
           </div>
           <div>
-            <p style="padding-left:15px; font-size: 28px; font-weight: bold; color: teal;">name</p>
+            <p style="padding-left:15px; font-size: 28px; font-weight: bold; color: teal;" data-toggle="tooltip" data-placement="left"
+            title="lore ipsum lore ipsum m sdijda wdjcsd swdjwj w ">
+          name
+          </p>
           </div>
         </div>
       </div>
@@ -414,7 +439,7 @@
   <!-- Footer -->
 <footer class="page-footer  font-small blue-grey lighten-5">
 
-  <div style="background-color: #21d192;">
+  <div style="background-color: #031640 ;">
     <div class="container">
 
       <!-- Grid row-->
@@ -427,7 +452,7 @@
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-6 col-lg-7 text-center text-md-right">
+        <div style="font-weight: bold;" class="col-md-6 col-lg-7 text-center text-md-right">
 
           <!-- Facebook -->
           <a class="fb-ic">
@@ -460,10 +485,10 @@
   </div>
 
   <!-- Footer Links -->
-  <div class="container text-center text-md-left mt-5">
+  <div  class="container text-center text-md-left mt-5">
 
     <!-- Grid row -->
-    <div class="row mt-3 dark-grey-text">
+    <div  class="row mt-3 dark-grey-text">
 
       <!-- Grid column -->
       <div class="col-md-3 col-lg-4 col-xl-3 mb-4">
@@ -565,6 +590,9 @@
   <script type="text/javascript" src="js/mdb.min.js"></script>
   <!-- Your custom scripts (optional) -->
   <script type="text/javascript">
+  $(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
   </script>
 
 </body>
