--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -387,13 +387,30 @@
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div></div>
-    
-
    
   </div>
 </section>
 <br>
 <br>
+
+<section  class="Newsec">
+  
+  <div  class="containerrr">
+    <div class="divflex" style="border-color: teal; border-style: dashed; border-width: 2px;">
+      <div class="Achiev" style="background-color: thistle; border-color: white; overflow-x: scroll; overflow-y: scroll;">
+       
+      <h3 class="res">Results</h3>
+      <br>
+      <p class="para"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error voluptatem soluta doloremque ab nobis eveniet nisi suscipit commodi earum accusamus omnis numquam, nam voluptates nesciunt neque nemo? Dolorem, voluptate obcaecati. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel commodi exercitationem molestiae consequuntur non tempore sit ea alias odio aliquam, omnis dignissimos maxime at suscipit, et necessitatibus molestias quis. <br> 
+       </p>
+      </div>
+      <div class="Noticee">
+      <h3 class="nots"> Notice</h3>
+      <br>
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ducimus dolorum consequuntur pariatur voluptate quam alias dicta. Necessitatibus quis temporibus cumque accusantium odio incidunt a obcaecati nulla, numquam assumenda magnam!</p>
+      </div>
+    </div>
+</section>
 
 <!-- <section class="notice" >
 
