--- Auto-Git Commit ---

--- a/Admission.html
+++ b/Admission.html
@@ -16,7 +16,7 @@
   <!-- Material Design Bootstrap -->
   <link rel="stylesheet" href="css/mdb.min.css">
   <!-- Your custom styles (optional) -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/admi.css">
 
 </head>
 <body>
@@ -85,13 +85,106 @@
 </nav>
 <!--/.Navbar -->
   </section>
-<br>
-<br>
-<br>
-<br>
+  <br>
+  <br>
+
+  <section  >
+    <div  class="facbreadcrum" >
+    <img   class="facbread"  src="./img/acad.png" alt="" width="100%" >
+    <div class="midle">
+      <p> Acadmics <br>
+      <span class="ob">
+      <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Acadmics</a></span>
+    </p>
+    </div>
+  </div>
+  </section>
 <section>
 
-    hello this is admission
+   <!-- Section: Features v.3 -->
+<section class="my-5">
+
+  <!-- Section heading -->
+  <h2 class="h1-responsive font-weight-bold text-center my-5">Why is it so great?</h2>
+  <!-- Section description -->
+  <p class="lead grey-text text-center w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur
+    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+    veniam.</p>
+<div class="container">
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-lg-7">
+
+      <!-- Grid row -->
+      <div class="row mb-3">
+
+        <!-- Grid column -->
+        <div class="col-1">
+          <i style="color: #990011ff;" class="fas fa-cogs fa-2x"></i>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="font-weight-bold mb-3">Process</h5>
+          <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad minima veniam,
+            quis nostrum exercitationem ullam. Reprehenderit maiores aperiam assumenda deleniti hic.</p>
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
+      <!-- Grid row -->
+      <div class="row mb-3">
+
+        <!-- Grid column -->
+        <div class="col-1">
+          <i style="color: #990011ff;" class="far fa-file-alt fa-2x"></i>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="font-weight-bold mb-3">Application Form</h5>
+          <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad minima veniam,
+            quis nostrum exercitationem ullam. Reprehenderit maiores aperiam assumenda deleniti hic.</p>
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!-- Grid row -->
+
+      <!--Grid row-->
+      <div class="row">
+
+        <!-- Grid column -->
+        <div class="col-1">
+          <i style="color: #990011ff;" class="far fa-comments fa-2x"></i>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-xl-10 col-md-11 col-10">
+          <h5 class="font-weight-bold mb-3">Enquiry</h5>
+          <p class="grey-text mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad minima
+            veniam, quis nostrum exercitationem ullam. Reprehenderit maiores aperiam assumenda deleniti hic.</p>
+        </div>
+        <!-- Grid column -->
+
+      </div>
+      <!--Grid row-->
+
+    </div>
+    <!--Grid column-->
+
+  </div>
+  <!-- Grid row -->
+</div>
+</section>
+<!-- Section: Features v.3 -->
 </section>
 
 
