--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -395,21 +395,23 @@
 
 <section  class="Newsec">
   
-  <div  class="containerrr">
-    <div class="divflex" style="border-color: teal; border-style: dashed; border-width: 2px;">
-      <div class="Achiev" style="background-color: thistle; border-color: white; overflow-x: scroll; overflow-y: scroll;">
-       
-      <h3 class="res">Results</h3>
-      <br>
-      <p class="para"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error voluptatem soluta doloremque ab nobis eveniet nisi suscipit commodi earum accusamus omnis numquam, nam voluptates nesciunt neque nemo? Dolorem, voluptate obcaecati. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi vel commodi exercitationem molestiae consequuntur non tempore sit ea alias odio aliquam, omnis dignissimos maxime at suscipit, et necessitatibus molestias quis. <br> 
-       </p>
+  <div class="divflex">
+    <div class="col-sm-8" id="one">
+      <centre>
+      <h2 class="res" style="color: black; font-size: 40px;font-family: 'Playfair Display', serif;">Results</h2>
+      </centre>
+
+     <div class="subsec">
+       <div class="photo"> <img src="" alt="">  hello </div>
+       <div class="cont">  heyaa   </div>
       </div>
-      <div class="Noticee">
-      <h3 class="nots"> Notice</h3>
-      <br>
-      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ducimus dolorum consequuntur pariatur voluptate quam alias dicta. Necessitatibus quis temporibus cumque accusantium odio incidunt a obcaecati nulla, numquam assumenda magnam!</p>
-      </div>
+
+       <div class="col-sm-4" id="two">
+         <h2>Notice Board</h2>
+       </div>
+
     </div>
+  </div>
 </section>
 
 <!-- <section class="notice" >
