--- a/Gallery.html
+++ b/Gallery.html
@@ -93,7 +93,7 @@
   <div  class="facbreadcrum" >
     <img   class="facbread"  src="./img/newGallery.png" alt="" width="100%" >
     <div class="midle">
-      <p>  Faculty  <br>
+      <p>  Gallery  <br>
       <span class="ob">
       <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Faculty</a></span>
     </p>
