--- Auto-Git Commit ---

--- a/index.html
+++ b/index.html
@@ -399,18 +399,22 @@
     <div class="col-sm-8" id="one">
       <centre>
       <h2 class="res" style="color: black; font-size: 40px;font-family: 'Playfair Display', serif;">Results</h2>
+      <br> 
+      <h3 id="line"> H. S. C. March 2020 results </h3>
       </centre>
+     <div class="subsec" style="overflow-y: scroll; overflow-x: scroll;">
+      
+       <div class="photo" style="width: 50%;"> <img src="./img/res1.jpg" alt="">   </div>
 
-     <div class="subsec">
-       <div class="photo"> <img src="" alt="">  hello </div>
-       <div class="cont">  heyaa   </div>
+       <div class="cont" style="width: 50%;"> Bhushan Vanjari 587/650 = 90.31%   </div>
       </div>
-
-       <div class="col-sm-4" id="two">
-         <h2>Notice Board</h2>
-       </div>
-
     </div>
+
+    <div class="col-sm-4" id="two">
+         <h2>Notice Board</h2>
+    </div>
+
+   
   </div>
 </section>
 
