--- a/Admission.html
+++ b/Admission.html
@@ -90,11 +90,11 @@
 
   <section  >
     <div  class="facbreadcrum" >
-    <img   class="facbread"  src="./img/acad.png" alt="" width="100%" >
+    <img   class="facbread"  src="./img/Academics 3.png" alt="" width="100%" >
     <div class="midle">
-      <p> Acadmics <br>
+      <p> Admission <br>
       <span class="ob">
-      <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Acadmics</a></span>
+      <a style="color: orangered;" href="">Home</a> / <a style="color: orangered;" href="">Admission</a></span>
     </p>
     </div>
   </div>
