--- Auto-Git Commit ---

--- a/BeyondAcad.html
+++ b/BeyondAcad.html
@@ -102,11 +102,29 @@
 <br>
 <br>
 <section>
-  <h1 class="head">Acadmics</h1>
+  <h1 class="head">Beyond Acadmics</h1>
   <br>
   <div   class="faccard">
     <div>
-      <h2> Arts </h2>
+      <h2 style="color: chocolate; font-weight: bold;">Safety & Security </h2>
+      <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
+    </div>
+    <div>
+      <img src="https://cdn.pixabay.com/photo/2016/01/17/02/08/cctv-1144371_1280.jpg" alt="" width=" 300px" height="250px">
+    </div>
+  </div>
+  <div   class="faccard">
+    <div>
+      <h2 style="color: darkgreen; font-weight: bold;"> Eco-Frindly School </h2>
+      <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
+    </div>
+    <div>
+      <img src="https://cdn.pixabay.com/photo/2016/10/30/05/45/learning-1782430_1280.jpg" alt="" width=" 300px" height="250px">
+    </div>
+  </div>
+  <div   class="faccard">
+    <div>
+      <h2 style="color: maroon;  font-weight: bold;"> Arts </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
@@ -115,29 +133,29 @@
   </div>
   <div   class="faccard">
     <div>
-      <h2> Culture  </h2>
+      <h2 style="color: blue; font-weight: bold;">  Culture  </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2015/08/28/11/37/painting-911804_1280.jpg" alt="" width=" 300px" height="250px">
+      <img src="https://cdn.pixabay.com/photo/2016/11/08/05/40/actor-1807557_1280.jpg" alt="" width=" 300px" height="250px">
     </div>
   </div>
   <div   class="faccard">
     <div>
-      <h2> Sports </h2>
+      <h2 style="color: blueviolet ; font-weight: bold;"> Sports </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2015/08/28/11/37/painting-911804_1280.jpg" alt="" width=" 300px" height="250px">
+      <img src="https://cdn.pixabay.com/photo/2015/01/26/22/40/child-613199_1280.jpg" alt="" width=" 300px" height="250px">
     </div>
   </div>
   <div   class="faccard">
     <div>
-      <h2> Social Services  </h2>
+      <h2 style="color:gold; font-weight: bold;"> Social Services  </h2>
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2015/08/28/11/37/painting-911804_1280.jpg" alt="" width=" 300px" height="250px">
+      <img src="https://cdn.pixabay.com/photo/2016/12/19/08/39/mobile-phone-1917737_1280.jpg" alt="" width=" 300px" height="250px">
     </div>
   </div>
 </section>
