--- a/Acadmics.html
+++ b/Acadmics.html
@@ -282,11 +282,20 @@
     </div>
   </div>
 </section>
-<br>
+<br>h
 <br>
 <h1 class="head">Facility </h1>
 <br>
 <section style="background-color: rgb(124, 198, 201);">
+  <div   class="faccard">
+    <div>
+      <h2> library  </h2>
+      <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
+    </div>
+    <div>
+      <img src="https://cdn.pixabay.com/photo/2016/01/29/08/44/classroom-1167524_1280.jpg" alt="" width=" 300px" height="250px">
+    </div>
+  </div>
   <div   class="faccard">
     <div>
       <h2> library  </h2>
@@ -313,7 +322,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="./img/c1.jpg" alt="" width=" 300px" height="250px">
+      <img src="https://cdn.pixabay.com/photo/2018/08/20/10/20/canteen-3618588_1280.jpg" alt="" width=" 300px" height="250px">
     </div>
   </div>
   <br>
