--- Auto-Git Commit ---

--- a/BeyondAcad.html
+++ b/BeyondAcad.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Title</title>
   <!-- MDB icon -->
@@ -110,7 +110,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2016/01/17/02/08/cctv-1144371_1280.jpg" alt="" width=" 300px" height="250px">
+      <img class="im"  src="https://cdn.pixabay.com/photo/2016/01/17/02/08/cctv-1144371_1280.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
   <div   class="faccard">
@@ -119,7 +119,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2016/10/30/05/45/learning-1782430_1280.jpg" alt="" width=" 300px" height="250px">
+      <img class="im"  src="https://cdn.pixabay.com/photo/2016/10/30/05/45/learning-1782430_1280.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
   <div   class="faccard">
@@ -128,7 +128,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2015/08/28/11/37/painting-911804_1280.jpg" alt="" width=" 300px" height="250px">
+      <img class="im"  src="https://cdn.pixabay.com/photo/2015/08/28/11/37/painting-911804_1280.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
   <div   class="faccard">
@@ -137,7 +137,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2016/11/08/05/40/actor-1807557_1280.jpg" alt="" width=" 300px" height="250px">
+      <img class="im"  src="https://cdn.pixabay.com/photo/2016/11/08/05/40/actor-1807557_1280.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
   <div   class="faccard">
@@ -146,7 +146,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2015/01/26/22/40/child-613199_1280.jpg" alt="" width=" 300px" height="250px">
+      <img class="im"  src="https://cdn.pixabay.com/photo/2015/01/26/22/40/child-613199_1280.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
   <div   class="faccard">
@@ -155,7 +155,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2016/12/19/08/39/mobile-phone-1917737_1280.jpg" alt="" width=" 300px" height="250px">
+      <img class="im"  src="https://cdn.pixabay.com/photo/2016/12/19/08/39/mobile-phone-1917737_1280.jpg" alt="" width=" 300px" height="300px">
     </div>
   </div>
 </section>
