--- a/Acadmics.html
+++ b/Acadmics.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Title</title>
   <!-- MDB icon -->
@@ -90,7 +90,7 @@
 <br>
 <section  >
   <div  class="facbreadcrum" >
-  <img   class="facbread"  src="./img/acad.png" alt="" width="100%" >
+  <img class="im"   class="facbread"  src="./img/acad.png" alt="" width="100%" >
   <div class="midle">
     <p> Acadmics <br>
     <span class="ob">
@@ -282,7 +282,7 @@
     </div>
   </div>
 </section>
-<br>h
+<br>
 <br>
 <h1 class="head">Facility </h1>
 <br>
@@ -302,7 +302,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2018/07/12/10/38/chemistry-3533039_1280.jpg" alt="" width=" 300px" height="250px">
+      <img class="im" src="https://cdn.pixabay.com/photo/2018/07/12/10/38/chemistry-3533039_1280.jpg" alt="" width=" 300px" height="250px">
     </div>
   </div>
  
@@ -312,7 +312,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2014/10/14/20/14/library-488690_1280.jpg" alt="" width=" 300px" height="250px">
+      <img class="im" src="https://cdn.pixabay.com/photo/2014/10/14/20/14/library-488690_1280.jpg" alt="" width=" 300px" height="250px">
     </div>
   </div>
  
@@ -322,7 +322,7 @@
       <p style="padding: 15px;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consectetur neque a facilis dolor, ut incidunt, nostrum dolorem unde omnis odit laudantium similique ad maiores atque temporibus! Cumque delectus fugit ipsa. <br> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem magni quaerat labore repellendus culpa omnis tenetur hic dicta, quasi sunt ipsa in rerum iste eligendi quam tempora illo vel incidunt. <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur laudantium ab, aperiam ad error voluptatibus soluta sint eius culpa quod asperiores quam laboriosam recusandae quasi corrupti tempore quae eligendi eos.</p>
     </div>
     <div>
-      <img src="https://cdn.pixabay.com/photo/2018/08/20/10/20/canteen-3618588_1280.jpg" alt="" width=" 300px" height="250px">
+      <img class="im" src="https://cdn.pixabay.com/photo/2018/08/20/10/20/canteen-3618588_1280.jpg" alt="" width=" 300px" height="250px">
     </div>
   </div>
   <br>
